# alps

./: .env  .gitignore  LICENSE  Pipfile  docker-compose.production.yml  docker-compose.yml  nginx.conf  production.env
backend/: .dockerignore  .editorconfig  Dockerfile  Dockerfile.production  Pipfile  pyproject.toml
backend/backend/: celery.py  settings.py  urls.py  wsgi.py
backend/datasets/: __init__.py  admin.py  apps.py  exceptions.py  parsers.py  permissions.py  registries.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/datasets/constants/: domain_types.py  method_types.py  process_status.py  signal_types.py
backend/datasets/fixtures/: initial_data.json
backend/datasets/migrations/: 0001_initial.py  0002_auto_20190705_0833.py  0003_auto_20190709_1514.py  0004_auto_20190709_1555.py  0005_analysislabel_analysissample.py  0006_auto_20190729_1141.py  0007_auto_20190801_1541.py  0008_auto_20190805_1011.py  0009_auto_20190808_1351.py  0010_auto_20190812_1015.py  0011_auto_20190816_0824.py  0012_auto_20190926_1322.py  0013_auto_20190929_1447.py  0014_auto_20190930_0922.py  0015_process_info.py  0016_auto_20190930_1242.py
backend/datasets/models/: __init__.py  analysis.py  base.py  data.py  files.py  processing.py  source.py
backend/datasets/processing_methods/: frequency_domain.py  ibi_correction.py  method_base.py  nonlinear_domain.py  time_domain.py
backend/datasets/sources/: csv_pandas.py  empatica_e4.py  everion.py  faros.py  source_base.py  timestamp_app.py
docs/: README.md  index.html
frontend/: .dockerignore  .eslintrc  (+3 more)
(+121 files in other folders)
